# yagde

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs
src/gd/: char.rs  gd_file.rs  info.rs  inventory.rs  item.rs  lists.rs  misc.rs  mod.rs  skills.rs  stats.rs
tests/: char.rs  read.rs  reset.rs
tests/save/_TestAoMFemaleHC/: player.gdc
tests/save/_TestAoMMaleSC/: player.gdc
tests/save/_TestFGFemaleHC/: player.gdc
tests/save/_TestFGMaleSC/: player.gdc
tests/save/_TestMain/: player.gdc
tests/save/_TestMain121/: player.gdc
tests/save/_TestVanillaFemaleHC/: player.gdc
tests/save/_TestVanillaMaleSC/: player.gdc
